--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos3.css" class="rel">
+    <link rel="stylesheet" href="estilos.css" class="rel">
     <link rel="stylesheet" href="waves.css" class="rel">
     <title>Formulario</title>
 </head> 
